# Tokei-App

./: README.md
app/: Cargo.toml
app/src/: main.rs
app/ui/: appwindow.slint
